<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".addPost.AddPostFragment">

    <TextView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Write a Blogpost"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/today"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <EditText
        android:id="@+id/addPostTitle"
        android:inputType="text"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/hint"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:elevation="@dimen/today"
        android:layout_width="match_parent"
        android:hint="@string/postTitle"
        android:layout_gravity="center"
        android:textColorHint="@color/second_text"
        android:background="@drawable/edittext"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_height="50dp"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="@dimen/today"
        android:background="@drawable/edittext"/>
    <EditText
        android:id="@+id/post"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:inputType="textMultiLine"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:hint="@string/writePost"
        android:textColorHint="@color/second_text"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/error1"
        android:layout_width="222dp"
        android:layout_height="27dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginEnd="108dp"
        android:text="@string/categoryRequired"
        android:textAlignment="center"
        android:visibility="gone"
        android:textColor="@color/colorAccent"
         />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_Btn"
       android:drawableStart="@drawable/camera"
        android:textColorHint="@color/second_text"
        android:layout_gravity="center_horizontal"

        android:textAppearance="?android:attr/textAppearanceLarge"
        />


    <Button
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/addPost"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content"
        android:background="@color/second_text"
        android:textColor="@color/white"
        android:text="@string/submit_Post"/>

        </LinearLayout>

    </ScrollView>



</LinearLayout>