<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:bind="http://schemas.android.com/apk/res-auto">
    <data class="EditPostFragmentBinding">
        <variable
            name="posts"
            type="com.example.blog_app.model.Post" />
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".editPost.EditPostFragment">

    <TextView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Edit BlogPost"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:textSize="@dimen/today"/>

    <EditText
        android:id="@+id/editPostTitle"
        android:inputType="text"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:elevation="@dimen/today"
        android:layout_width="match_parent"
        android:hint="@string/postTitle"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:text="@={posts.title}"
        android:layout_gravity="center"
        android:textColorHint="@color/second_text"
        android:background="@drawable/edittext"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_height="50dp"/>

    <EditText
        android:inputType="text"
        android:id="@+id/editCategory"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:text = "@={posts.category}"
        android:hint="Tag/Category"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:textColorHint="@color/second_text"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="@dimen/today"
        android:background="@drawable/edittext"/>
    <EditText
        android:id="@+id/editPost"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:inputType="textMultiLine"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_width="match_parent"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:text = "@={posts.post}"
        android:hint="Edit Post"
        android:textColorHint="@color/second_text"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/error1"
        android:layout_width="222dp"
        android:layout_height="27dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginEnd="108dp"
        android:text="@string/categoryRequired"
        android:textAlignment="center"
        android:visibility="gone"

        android:textColor="@color/colorAccent"
        />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:scaleType="fitXY"
        android:visibility="gone"
        android:src ="@{posts.image}"
        android:id="@+id/editImage"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/changeImage"
        android:textColorHint="@color/second_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Change Image" />




    <Button
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:id="@+id/editSubmitPost"
        android:layout_width="200dp"
        android:layout_gravity="center"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_height="wrap_content"
        android:background="@color/second_text"
        android:textColor="@color/white"
        android:text="@string/update_Post"/>



</LinearLayout>
</layout>